[package]
name = "easygpu"
version = "0.0.2"
description = "Simple wrapper around wgpu aiming to make some common operations easier"
repository = "https://github.com/khonsulabs/easygpu"
authors = ["Jonathan Johnson <jon@khonsulabs.com>"]
license = "MIT"
edition = "2018"
keywords = ["graphics", "wgpu"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
euclid = "0.22"
wgpu = { version = "0.6.0" }
num-traits = "0.2"
raw-window-handle = { version = "0.3" }
thiserror = "1"

[dev-dependencies]
winit = "0.23"
futures = "0.3"
