[package]
name = "easygpu"
version = "0.0.12"
description = "Simple wrapper around wgpu aiming to make some common operations easier"
repository = "https://github.com/khonsulabs/easygpu"
authors = ["Jonathan Johnson <jon@khonsulabs.com>"]
license = "MIT"
edition = "2018"
keywords = ["graphics", "wgpu"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
euclid = "0.22"
wgpu = { version="0.9" }
num-traits = "0.2"
thiserror = "1"
bytemuck = { version="1", features=["derive"] }


[target.'cfg(target_arch = "wasm32")'.dependencies]
wgpu = { version="0.9", default-features=false, features=["webgl"] }

[dev-dependencies]
winit = "0.25"
futures = "0.3"
