[package]
name = "easygpu-lyon"
version = "0.4.0"
authors = ["Jonathan Johnson <jon@khonsulabs.com>"]
edition = "2018"
description = "A 2d graphics pipeline for easygpu utilizing lyon"
readme = "./README.md"
license = "MIT"
keywords = ["easygpu", "lyon", "2d", "graphics"]
categories = ["graphics"]
repository = "https://github.com/khonsulabs/easygpu-lyon"

[dependencies]
easygpu = { version = "0.4.0", path = "../easygpu" }
lyon_tessellation = "1.0.1"
bytemuck = { version = "1.7.3", features = ["derive"] }

[dev-dependencies]
winit = "0.27.4"
futures = "0.3.19"
env_logger = "0.10.0"
anyhow = "1.0.68"
